# RayTracer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  coverage.sh
cmake_modules/: Findassimp.cmake
scenes/: Cube.dae  Ico.dae  hourglass_gumroad.mtl
src/: main.cc  main.cpp  main_test.cc  main_test.cpp
src/Camera/: Camera.cc  Camera.cpp  Camera.h  Camera.hh  Camera_test.cc  Camera_test.cpp
src/Config/: Config.cc  Config.h  Config_test.cc
src/Dispatcher/: Dispatcher.cc  Dispatcher.h  Dispatcher_test.cc
src/Engine/: Color.cc  Color.h  Color_test.cc  Config.h  Constant.h  Engine.cc  Engine.h  Engine_test.cc  Tools.h
src/KDTree/: KDBox.cc  KDBox.h  KDBox_test.cc  KDNode.cc  KDNode.h  KDNode_test.cc
src/Light/: Light.cc  Light.h  PointLight.cc  PointLight.h  PointLight_test.cc
src/Loader/: AssimpLoader.cc  AssimpLoader.h  AssimpLoader_test.cc  Bitmap.h  OBJLoader.cc  OBJLoader.h
src/Material/: Material.cc  Material.h  Material_test.cc
src/Mesh/: Mesh.cc  Mesh.h  Object.cc  Object.h  Object_test.cc  Triangle.cc  Triangle.h  Triangle_test.cc  Vertex.cc  Vertex.h  Vertex_test.cc
src/Sky/: Sky.h  SphereSky.cc  SphereSky.h  SphereSky_test.cc
src/Vector/: Vector2.cc  Vector2.cpp  Vector2.h  Vector2.hh  Vector2_test.cc  Vector3.cc  Vector3.cpp  Vector3.h  Vector3.hh  Vector3_test.cc
src/loader/: OBJLoader.h
validation_test/: regenerate.sh  test.sh  upload.sh
validation_test/icosahedron/: 500x500_100.bpm
